--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bluestacks",
+  "name": "playstore",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,10 +10,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/eslint-config-airbnb": "^4.0.1",
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "lodash": "^4.17.15",
     "register-service-worker": "^1.6.2",
+    "swiper": "^5.2.0",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.1.3",
+    "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -23,7 +29,6 @@
     "@vue/cli-plugin-pwa": "^4.0.0",
     "@vue/cli-plugin-unit-jest": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
     "chromedriver": "77",
@@ -31,7 +36,10 @@
     "eslint-plugin-vue": "^5.0.0",
     "geckodriver": "^1.19.0",
     "node-sass": "^4.12.0",
+    "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vuetify": "^1.1.1",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   }
 }
